fix border radius on safari

--- a/src/components/SearchArea.module.css
+++ b/src/components/SearchArea.module.css
@@ -51,14 +51,13 @@
 .SearchInputContainer {
   height: 40.40px;
   margin-top: 1px;
-  padding-bottom: 2px;
-  padding-right: 2px;
+  padding-bottom: 1px;
+  padding-right: 1px;
 }
 
 .SearchInput {
   align-items: center;
   background: rgb(255, 255, 255);
-  border-width: 0;
   border-radius: 3px;
   -webkit-border-radius: 3px;
   padding-top: 0px;
@@ -71,7 +70,7 @@
   user-select: none;
   width: 100%;
   height: 100%;
-  outline: 1px solid hsl(0, 0%, 80%);
+  border: 1px solid hsl(0, 0%, 80%);
   margin-left: 1px;
   margin-top: 0px;
   font-size: 15px;
@@ -79,7 +78,9 @@
 }
 
 .SearchInput:focus-visible {
-  outline: 2px solid #6f5bd7;
+  outline: unset;
+  border-color: #6f5bd7;
+  box-shadow: 0 0 0 1px #6f5bd7;
 }
 
 .FacetListContainer {
